--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -44,6 +44,7 @@
           {{ partial "header.html" . }}
           <main id="content" class="site-content">
             {{ block "content" . }}{{ end }}
+              {{ partial "mermaid.html" . }}
           </main>
           {{ partial "footer.html" . }}
         </div>
