--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -24,7 +24,7 @@ $accent-colors: (
   green:  #10b981,
   red:    #fa292a,
   violet: #7c43a8,
-  yellow: #ed9700
+  yellow: #d3af37
 );
 
 // Container max width
