--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -20,7 +20,7 @@ $color-accent:   #d8195e !default;
 
 // Alternative accent colors
 $accent-colors: (
-  blue:   #0c8aea,
+  blue:   #1a2a40,
   green:  #10b981,
   red:    #fa292a,
   violet: #7c43a8,
